--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <title>DreamTech - Staň sa členom</title>
     <style>
+        /* 🎨 Štýl pozadia s jemnými čiernymi bodkami */
         body {
             font-family: Arial, sans-serif;
             padding: 40px;
-
-            /* 🌌 Svetlomodré pozadie s čiernymi bodkami */
             background-color: #e6f2ff;
             background-image:
                 radial-gradient(circle at 25px 25px, rgba(0, 0, 0, 0.15) 2px, transparent 0),
@@ -16,6 +15,7 @@
             background-size: 100px 100px;
         }
 
+        /* 🧱 Hlavný kontajner */
         .container {
             max-width: 600px;
             margin: auto;
@@ -26,6 +26,7 @@
             padding-top: 80px;
         }
 
+        /* 🖼️ Zmenšený banner vľavo hore */
         .banner {
             position: absolute;
             top: 15px;
@@ -35,6 +36,7 @@
             border-radius: 8px;
         }
 
+        /* 📝 Formulár */
         form {
             padding: 20px;
         }
@@ -45,6 +47,7 @@
             margin: 10px 0;
             border-radius: 4px;
             border: 1px solid #ccc;
+            box-sizing: border-box;
         }
 
         button {
@@ -66,6 +69,13 @@
             text-align: center;
             margin: 10px 0 20px;
         }
+
+        /* 📱 Responzívne pre mobily */
+        @media (max-width: 480px) {
+            body { padding: 20px; }
+            .banner { width: 90px; top: 10px; left: 10px; }
+            .container { padding-top: 70px; }
+        }
     </style>
 </head>
 <body>
@@ -75,10 +85,22 @@
 
     <h2>Staň sa členom DreamTechu</h2>
 
-    <form action="odosli.php" method="POST">
+    <!-- ✉️ Web3Forms formulár -->
+    <form action="https://api.web3forms.com/submit" method="POST">
+        <!-- 🔑 Access Key (tvoj unikátny kľúč) -->
+        <input type="hidden" name="access_key" value="374d7abf-edc1-4e62-976e-d8ba5de68c65">
+
+        <!-- 📬 E-mail kam to príde -->
+        <input type="hidden" name="to_email" value="stranka1231@gmail.com">
+
+        <!-- 🔄 Presmerovanie po úspešnom odoslaní -->
+        <input type="hidden" name="redirect" value="https://tvoj-username.github.io/tvoj-repo/dakujeme.html">
+
+        <!-- 🧍 Polia formulára -->
         <input type="text" name="meno" placeholder="Meno a priezvisko" required>
         <input type="email" name="email" placeholder="Email" required>
         <input type="tel" name="telefon" placeholder="Telefónne číslo" required>
+
         <button type="submit">Chcem sa stať členom DreamTechu</button>
     </form>
 </div>
