--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>DreamTech - Staň sa členom</title>
     <style>
-        /* 🎨 Štýl pozadia s jemnými čiernymi bodkami */
+        /* 🎨 Jemné čierne bodkované pozadie */
         body {
             font-family: Arial, sans-serif;
             padding: 40px;
@@ -94,7 +94,7 @@
         <input type="hidden" name="to_email" value="stranka1231@gmail.com">
 
         <!-- 🔄 Presmerovanie po úspešnom odoslaní -->
-        <input type="hidden" name="redirect" value="https://tvoj-username.github.io/tvoj-repo/dakujeme.html">
+        <input type="hidden" name="redirect" value="https://michal05214.github.io/dreamtechclen/dakujeme.html">
 
         <!-- 🧍 Polia formulára -->
         <input type="text" name="meno" placeholder="Meno a priezvisko" required>
