--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <input type="hidden" name="access_key" value="374d7abf-edc1-4e62-976e-d8ba5de68c65">
 
         <!-- 📬 E-mail kam to príde -->
-        <input type="hidden" name="to_email" value="stranka1231@gmail.com">
+        <input type="hidden" name="to_email" value="info@dreamtech.sk">
 
         <!-- 🔄 Presmerovanie po úspešnom odoslaní -->
         <input type="hidden" name="redirect" value="https://michal05214.github.io/dreamtechclen/dakujeme.html">
@@ -107,3 +107,4 @@
 
 </body>
 </html>
+
